--- a/cookbooks/phpdev/templates/default/php.ini.erb
+++ b/cookbooks/phpdev/templates/default/php.ini.erb
@@ -862,6 +862,7 @@ default_socket_timeout = 60
 ; default extension directory.
 ;
 extension=mongo.so
+extension=zmq.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
