added extension "gearman.so"

--- a/cookbooks/phpdev/templates/default/php.ini.erb
+++ b/cookbooks/phpdev/templates/default/php.ini.erb
@@ -863,6 +863,7 @@ default_socket_timeout = 60
 ;
 extension=mongo.so
 extension=zmq.so
+extension=gearman.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
