--- a/cookbooks/phpdev/templates/default/php.ini.erb
+++ b/cookbooks/phpdev/templates/default/php.ini.erb
@@ -861,6 +861,7 @@ default_socket_timeout = 60
 ; If you only provide the name of the extension, PHP will look for it in its
 ; default extension directory.
 ;
+zend_extension=/usr/lib/php5/20100525/xdebug.so
 extension=mongo.so
 extension=zmq.so
 extension=gearman.so
