apache2.conf and php.ini will be configurable by chef.json

--- a/cookbooks/phpdev/templates/default/apache2.conf.erb
+++ b/cookbooks/phpdev/templates/default/apache2.conf.erb
@@ -163,7 +163,7 @@ Include ports.conf
 
 <Directory /var/www/>
 	Options Indexes FollowSymLinks
-	AllowOverride All
+	AllowOverride <%= node['apache2']['var/www']['allow_override'] %>
 	Require all granted
 </Directory>
 
