--- a/cookbooks/default/templates/default/php/php.ini.erb
+++ b/cookbooks/default/templates/default/php/php.ini.erb
@@ -1360,6 +1360,7 @@ session.save_handler = files
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
 ;session.save_path = "/var/lib/php5"
+session.save_path = "/tmp"
 
 ; Whether to use strict session mode.
 ; Strict session mode does not accept uninitialized session ID and regenerate
